build(development): :construction: in progress

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,7 +15,7 @@ CLOUD_NAME= # set cloud key for cloudinary
 API_KEY= # set api key for cloudinary
 API_SECRET= # set api secret for cloudinary
 
-POSTGRES_HOST=127.0.0.1 # docker -> postgres
+POSTGRES_HOST=127.0.0.1 # docker -> aiinterview-postgres
 # POSTGRES_PORT=5432 -> optional
 POSTGRES_USER=postgres
 POSTGRES_DB=AI-Interview-Database
