--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -2,19 +2,19 @@
 version: '3.8'
 
 volumes:
-  ai-interview-postgres-db:
+  aiinterview-postgres-db:
 
 networks:
-  ai-interview-proxy:
+  aiinterview-proxy:
   proxy:
     external: true
 
 services:
-  ai-interview-backend:
+  aiinterview-backend:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: ai-interview-backend
+    container_name: aiinterview-backend
     networks:
       - ai-interview-proxy
       - proxy
@@ -22,21 +22,21 @@ services:
     env_file: .env
     depends_on:
       - postgres
-    entrypoint: ['/app/wait-for.sh', 'postgres:5432', '--', '/app/start.sh']
+    entrypoint: ['/app/wait-for.sh', 'aiinterview-postgres:5432', '--', '/app/start.sh']
     command: [ 'node', 'dist/index.js']
 
-  postgres:
-    container_name: ai-interview-postgres
+  aiinterview-postgres:
+    container_name: aiinterview-postgres
     image: postgres:16-alpine
     volumes:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
-      - ai-interview-postgres-db:/var/lib/postgresql/data
+      - aiinterview-postgres-db:/var/lib/postgresql/data
     env_file: .env
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     networks:
-      - ai-interview-proxy
+      - aiinterview-proxy
     # ports: [5432:5432]
