feat(development): :construction: in progress

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,6 +15,8 @@ CLOUD_NAME= # set cloud key for cloudinary
 API_KEY= # set api key for cloudinary
 API_SECRET= # set api secret for cloudinary
 
+GEMINI_API_KEY=dbfionsohbiLAHBIUSDRHBuoikhdasrf
+
 POSTGRES_HOST=127.0.0.1 # docker -> aiinterview-postgres
 # POSTGRES_PORT=5432 -> optional
 POSTGRES_USER=postgres
