--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,25 @@
 # dependencies
-/frontend/node_modules
-/backend/node_modules
+# Ignore all node_modules folders in the project
+**/node_modules
 
 # production
-/frontend/build
-/frontend/dist
-
-/backend/build
-/backend/dist
-
-# database files create by commands
-# /backend/src/db/postgresql/migrations
+# Ignore all build and dist folders across the project
+**/build
+**/dist
 
 # environment
 *.env
 !.env.example
 
 # development
-/backend/tmp
-/node_modules
+**/tmp
+**/temp
+
+# logs
+**/logs
+
+# database files create by commands
+# /backend/src/db/postgresql/migrations
 
 # temporary storage
 /backend/uploadStorage
