--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -12,13 +12,13 @@ tasks:
     desc: Install all necessary dependencies for the project across backend and frontend services.
     cmds:
       - npm install
-      - cd backend && npm run install
+      - cd backend/server && npm run install
       - cd frontend && npm run install
 
   build:
     desc: Builds the project locally
     cmds:
-      - cd backend && npm run build
+      - cd backend/server && npm run build
       - cd frontend && npm run build
 
   dev:
@@ -29,7 +29,7 @@ tasks:
   server:
     desc: start server from backend service
     cmds:
-      - cd backend && npm run dev
+      - cd backend/server && npm run dev
 
   client:
     desc: start reactjs server from frontend service
@@ -39,12 +39,14 @@ tasks:
   compose-up-backend:
     desc: start backend services using Docker Compose
     cmds:
-      - docker-compose -f ./backend/docker-compose.yml up -d
+      - docker-compose -f ./backend/databases/docker-compose.yml up -d
+      - docker-compose -f ./backend/server/docker-compose.yml up -d
 
   compose-down-backend:
     desc: stop backend services using Docker Compose
     cmds:
-      - docker-compose -f ./backend/docker-compose.yml down
+      - docker-compose -f ./backend/server/docker-compose.yml down
+      - docker-compose -f ./backend/databases/docker-compose.yml down
 
   compose-up-frontend:
     desc: start frontend services using Docker Compose
