--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "express": "^4.21.0",
+    "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "multer": "^1.4.5-lts.1",
