--- a/backend/server/.env.example
+++ b/backend/server/.env.example
@@ -13,6 +13,7 @@ TOKEN_NAME=aiinterviewtoken # token name which will be used in cookies
 GEMINI_API_KEY=your_gemini_api_key
 
 REDIS_PASSWORD=redia_password
+REDIS_URL=http://localhost:6379
 
 POSTGRES_HOST=127.0.0.1 # docker -> aiinterview-postgres
 # POSTGRES_PORT=5432 -> optional
