--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@arcjet/node": "^1.0.0-alpha.34",
     "@google/generative-ai": "^0.19.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
