docs(development): example file updated

--- a/backend/server/.env.example
+++ b/backend/server/.env.example
@@ -1,14 +1,17 @@
 ENVIRONMENT=development # or production
 ALLOWED_ORIGINS=http://localhost:5173,http://localhost:4173 # origins allowed for server
-SERVER_KEY=jjf8eyfhw98hf8sd7we98hsdvb # server can be only accessible with server in headers
+SERVER_KEY=your_server_key # server can be only accessible with server in headers
 PORT=5000
 
 MAIL_HOST=smtp.gmail.com
 MAIL_USER=your_mail_id@gmail.com # email for sending mails to user
 MAIL_PASS=abcd efgh ijkl abcd # pass key for email MAIL_USER id
 
-JWT_SECRET=87vib98bhjksdvb # secret for jwt tokens
+JWT_SECRET=jwt_secret # secret for jwt tokens
 TOKEN_NAME=aiinterviewtoken # token name which will be used in cookies
+
+ARCJET_ENV=development
+ARCJET_KEY=your_arcjet_api_key
 
 GEMINI_API_KEY=your_gemini_api_key
 
