--- a/backend/server/tsconfig.json
+++ b/backend/server/tsconfig.json
@@ -93,7 +93,7 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
   "include": ["src/**/*", "env.d.ts"],
-  "exclude": ["node_modules", "dist", "temp", "tmp"],
+  "exclude": ["node_modules", "dist", "temp", "tmp", "logs"],
   "ts-node": {
     "require": ["tsconfig-paths/register"]
   }
