--- a/backend/server/docker-compose.yaml
+++ b/backend/server/docker-compose.yaml
@@ -3,21 +3,20 @@ version: '3.8'
 
 networks:
   aiinterview-proxy:
+    external: true
   proxy:
     external: true
 
 services:
-  aiinterview-backend:
+  aiinterview-server:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: aiinterview-backend
+    container_name: aiinterview-server
     networks:
-      - ai-interview-proxy
+      - aiinterview-proxy
       - proxy
     ports: [5000:5000] # disable in production
     env_file: .env
-    depends_on:
-      - postgres
     entrypoint: ['/app/wait-for.sh', 'aiinterview-postgres:5432', '--', '/app/start.sh']
     command: [ 'node', 'dist/index.js']
