--- a/frontend/docker-compose.yaml
+++ b/frontend/docker-compose.yaml
@@ -6,11 +6,11 @@ networks:
     external: true
 
 services:
-  ai-interview-frontend:
+  aiinterview-client:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: ai-interview-frontend
+    container_name: aiinterview-client
     networks:
       - proxy
     ports: [4173:4173] # disable in production
