--- a/backend/databases/docker-compose.yaml
+++ b/backend/databases/docker-compose.yaml
@@ -23,6 +23,8 @@ services:
       REDIS_ARGS: --requirepass ${REDIS_PASSWORD}
     restart: unless-stopped
     # ports: ["6379:6379"]
+    networks:
+      - aiinterview-backend-proxy
     deploy:
       resources:
         limits:
