refactor(development): env variable added for migrate and trigger

--- a/backend/server/.env.example
+++ b/backend/server/.env.example
@@ -16,6 +16,8 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=redia_password
 
+POSTGRES_MIGRATE=yes # yes or no
+POSTGRES_TRIGGER=yes # yes or no
 POSTGRES_HOST=127.0.0.1 # docker -> aiinterview-postgres
 # POSTGRES_PORT=5432 -> optional
 POSTGRES_USER=postgres
