chore(monitoring): prometheus and loki added

--- a/backend/server/.env.example
+++ b/backend/server/.env.example
@@ -3,6 +3,8 @@ ALLOWED_ORIGINS=http://localhost:5173,http://localhost:4173 # origins allowed fo
 SERVER_KEY=your_server_key # server can be only accessible with server in headers
 PORT=4000
 
+LOKI_URL=http://localhost:3100/loki/api/v1/push # loki url for logging
+
 MAIL_HOST=smtp.gmail.com
 MAIL_USER=your_mail_id@gmail.com # email for sending mails to user
 MAIL_PASS=abcd efgh ijkl abcd # pass key for email MAIL_USER id
