--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -31,8 +31,10 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.0",
+    "prom-client": "^15.1.3",
     "uuid": "^10.0.0",
     "winston": "^3.14.2",
+    "winston-loki": "^6.1.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
