--- a/.hintrc
+++ b/.hintrc
@@ -3,6 +3,14 @@
     "development"
   ],
   "hints": {
-    "axe/forms": "off"
+    "axe/forms": "off",
+    "axe/aria": [
+      "default",
+      {
+        "aria-valid-attr-value": "off",
+        "aria-input-field-name": "off",
+        "aria-allowed-attr": "off"
+      }
+    ]
   }
 }
