--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -59,6 +59,7 @@
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.49.0"
   }
 }
